--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.13.1",
     "got": "^3.3.0",
     "json-2-csv": "^1.3.0",
-    "urllib-sync": "^1.1.0"
+    "urllib-sync": "^1.1.0",
+    "winston": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
