--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "cheerio": "^0.19.0",
     "eslint": "^0.24.0",
     "express": "^4.13.1",
+    "express-promise": "^0.4.0",
     "got": "^3.3.0",
     "json-2-csv": "^1.3.0",
+    "json2csv": "^2.4.3",
     "urllib-sync": "^1.1.0",
     "winston": "^1.0.1"
   },
