--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "got": "^3.3.0",
     "json-2-csv": "^1.3.0",
     "json2csv": "^2.4.3",
+    "promise-queue": "^2.1.1",
     "urllib-sync": "^1.1.0",
     "winston": "^1.0.1"
   },
