--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "simplify comparisons of online ads",
   "main": "server.js",
   "dependencies": {
-    "babel": "^5.6.14",
-    "cheerio": "^0.19.0",
-    "eslint": "^0.24.0",
-    "express": "^4.13.1",
+    "babel-cli": "^6.14.0",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-preset-node6": "^11.0.0",
+    "bluebird": "^3.4.6",
+    "cheerio": "^0.22.0",
+    "express": "^4.14.0",
     "express-promise": "^0.4.0",
-    "got": "^3.3.0",
-    "json-2-csv": "^1.3.0",
-    "json2csv": "^2.4.3",
-    "promise-queue": "^2.1.1",
-    "urllib-sync": "^1.1.0",
-    "winston": "^1.0.1"
+    "got": "^6.5.0",
+    "json2csv": "^3.7.0",
+    "promise-queue": "^2.2.3",
+    "querystring": "^0.2.0",
+    "winston": "^2.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "eslint": "^3.6.0"
+  },
   "scripts": {
     "test": "karma start",
     "start": "babel-node server.js"
